# orgmprop

./: .env.example  .gitignore  Dockerfile  MIGRACIONES.md  Makefile  README.md  _cache_config.py  _database_config.py  _google_config.py  _logs_config.py  _migrate_aliembic.py  _models_config.py  _update_static.py  alembic.ini  api.md  changelog.md  deploy.sh  folder.json  go.mod  go.sum  install.sh  main.py  prompt_prespuesto.txt  proposal_services.py  pyproject.toml  stack.md  test.py  test.sh
assets/: embed.go  html_template.yaml  presupuesto.yaml
ejemplo/: readme.md
ejemplo/cmd/orgmai/: main.go
ejemplo/internal/chat/: chat.go
ejemplo/internal/config/: config.go
ejemplo/internal/conversation/: conversation.go
ejemplo/internal/logger/: logger.go
ejemplo/internal/ui/: ui.go
internal/ai/: anthropic.go
internal/config/: config.go
internal/generator/: html.go  presupuesto.go
internal/logger/: logger.go
internal/project/: project.go
internal/ui/: colors.go  forms.go  menu.go
propuesta/: propuesta_orgm_final.html  template.html
propuesta/css/: template.css
propuesta/html/: propuesta.yaml
propuesta/prompt/: propuesta.yaml
